refactor: update updateDefinitions.get method